--- a/index.html
+++ b/index.html
@@ -652,11 +652,11 @@
 							</div-->
 						
 					</div>
-					<div class="row">
+					<!--div class="row">
 						<div class="col-md-12 animate-box">
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
 						</div>
-					</div>
+				</div-->
 				</div>
 			</section>
 
@@ -732,7 +732,7 @@
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>AGI DSBS Department, SRM IST</p>
+									<p>AG1 DSBS Department, SRM IST</p>
 								</div>
 							</div>
 
