--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Higher Secondary , ISC </a> <span>2022</span></h2>
+					               	<h2><a href="#">Higher Secondary , CBSE </a> <span>2022</span></h2>
 					                  <p>Army Public School ASC Center and College ,Bangalore , Karnataka.</p>
 					               </div>
 					            </div>
