--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<span class="heading-meta">About Me</span>
-										<h2 class="colorlib-heading">Who Am I?</h2>
+										<span class="heading-meta"></span>
+										<h2 class="colorlib-heading">About Me</h2>
 										<p><strong>Hi,I'm Simran</strong>, a 20-year-old Sophomore Computer Science Engineering (CSE) undergraduate with a strong passion for Open Source technology, a keen interest in Data and emerging technologies, and a drive for Appdev. Eager to contribute to innovative projects and learn from industry professionals. .</p>
 										<p></p>
 									</div>
@@ -589,11 +589,11 @@
 								</div>
 							</div>
 						</div>
-						<!--div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
 							<div class="project" style="background-image: url(images/img-4.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/SyedTanseer/CPU-Benchmarking">CPU Benchmarking</a></h3>
+										<h3><a href="https://github.com/SimranS2875/DSA-Project">DSA Project</a></h3>
 										<span></span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
@@ -603,8 +603,8 @@
 									</div>
 								</div>
 							</div>
-						</!--div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+						</div>
+						<!--div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/img-5.jpg);">
 								<div class="desc">
 									<div class="con">
