--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 							<div class="project" style="background-image: url(images/img-4.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/SimranS2875/DSA-Project">DSA Project</a></h3>
+										<h3><a href="https://github.com/SimranS2875/DSA-Project">Metro Rail Application using DSA</a></h3>
 										<span></span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
