--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
     								<div class="colorlib-icon">
         							<!-- Replace the following line with your image tag -->
-       								 <img src="path/to/your/image.png" alt="Phone Icon">
+       								 <img src="images/linkedin-svgrepo-com.svg" alt="Phone Icon">
   								  </div>
   								  <div class="colorlib-text">
        									 <p><a href="https://www.linkedin.com/in/simran-singh-a95124283?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">linkedin</a></p>
